# PosixHALExample

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  PosixExample  PosixHalExample  cmake_install.cmake  halgit.py  repos.json
.github/workflows/: c-cpp.yml
include/: enabled_modules.h  global_includes.h  platform_cshal.h  threads_list.h
src/: Makefile  enabled_modules.h  main.cpp  threads_list.h
